--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -28,6 +28,14 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+h3 {
+  font-size: 0.9em;
+}
+
+h4 {
+  font-size: 0.8em;
+}
+
 .container-style-1 {
   background: var(--color-container-1);
 }
@@ -104,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: row;
   position: relative;
-  height: 3em;
+  height: 45px;
   width: calc(95% - 30px);
   margin: 10px;
   background: white;
@@ -116,7 +124,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .animate-task-shrink {
-  transform: scaleY(0); 
+  height: 0;
+  margin: 0;
 }
 
 
@@ -152,11 +161,18 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   padding-left: 10px;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .task-item-task-details-title {
   pointer-events: none;
   font-size: .9em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
 
 .task-item-task-details-desc {
@@ -164,6 +180,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: .7em;
   padding-left: 1px;
   font-weight: 300;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
 
 .task-item-task-priority {
@@ -193,12 +212,13 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 70px;
+  height: 100%;
+  width: auto;
   /* outline: 1px black solid; */
 }
 
 .img-task-item-task-completed {
-  height: 32px;
+  height: 28px;
   width: auto;
   padding: 0 10px;
   pointer-events: none;
@@ -214,6 +234,12 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 800ms linear;
+}
+
+.animate-background-opacity {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .task-item-options-overlay {
@@ -223,11 +249,21 @@ h1, h2, h3, h4, h5, h6 {
   transform: translateX(-100%);
   transition: transform 800ms ease-in-out;
   transform-origin: left;
+  perspective: 1000px;
+  backface-visibility: hidden; 
+  transform-style: preserve-3d;
+  -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.35);
+  box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.35);
 }
 
 .animate-task-item-options-overlay {
   transform: translateX(0);
-  
+}
+
+.animate-task-item-options-flip {
+  transform-origin: initial;
+  transform: rotateX(180deg);
 }
 
 .task-item-options-delete-container {
@@ -248,6 +284,8 @@ h1, h2, h3, h4, h5, h6 {
   background: red;
   width: 100%;
   height: 100%;
+  transform: rotateX(180deg);
+  backface-visibility: hidden;
   /* display: none; */
 }
 
@@ -267,9 +305,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* END - Task item OVERLAY as an individual */
 
+
+
+
 /* Task item as an individual */
 
 .task-settings-wrapper {
+  z-index: 999;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -314,7 +356,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .task-settings-heading-container {
   text-align: center;
-  margin: 30px 0 20px 0;
+  margin: 20px 0 15px 0;
 }
 
 input, select, textarea {
@@ -366,13 +408,12 @@ select {
 
 .task-settings-group-heading {
   position: relative;
-  font-size: 1em;
   padding: 5px 0 5px 5px;
   margin: 0 -4px;
   border-radius: 2px;
   background: var(--color-trim-1);
   color: var(--color-container-1);
-  letter-spacing: .05em;
+  
 }
 
 /* .task-settings-group-heading::after {
@@ -892,18 +933,51 @@ select {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  
+@media only screen and (max-width: 450px) {
+  .tasks-container {
+    
+    background: green;
+  }
+  .mobile-menu-container {
+    
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 450px) {
+  .tasks-container {
+    background: red;
+  }
+  .mobile-menu-container {
+    position: relative;
+    transform: translateX(0);
+    transition: none;
 
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
+  .task-mobile-menu-arrow-container {
+    display: none;
+  }
+
+  .task-container {
+    margin: 10px;
+  }
+
+  task-topbar-container {
+
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
+  .tasks-container {
+    background: yellow;
+  }
+  .mobile-menu-container {
+    background: yellow;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
