--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -56,20 +56,33 @@ h4 {
   width: 100%;
 }
 
+.main-window-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.main-window-body {
+  display: flex;
+  height: 100%;
+  width: 100;
+  background: black;
+  flex-shrink: 1;
+}
+
 .tasks-container {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100% - 80px);
+  height: 100%;
   width: 100%;
-  margin-top: 80px;
   padding-top: 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   background: rgba(248, 248, 248, 0.932);
-
 }
 
 /* Add button overlay */
@@ -531,10 +544,12 @@ select {
 
 /* Task Top Bar */
 .task-topbar-container {
-  position: absolute;
+  display: flex;
+  position: relative;
   height: 80px;
   width: 100%;
   z-index: 1;
+  flex-shrink: 0;
 }
 
 /* Status Message */
@@ -936,7 +951,6 @@ select {
 @media only screen and (max-width: 450px) {
   .tasks-container {
     
-    background: green;
   }
   .mobile-menu-container {
     
@@ -946,7 +960,6 @@ select {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 450px) {
   .tasks-container {
-    background: red;
   }
   .mobile-menu-container {
     position: relative;
@@ -965,7 +978,7 @@ select {
     margin: 10px;
   }
 
-  task-topbar-container {
+  .task-topbar-container {
 
   }
 }
@@ -974,9 +987,14 @@ select {
 @media only screen and (min-width: 768px) {
   .tasks-container {
     background: yellow;
+    height: 100%;
+  }
+
+  .task-container {
+    flex-shrink: 0;
   }
   .mobile-menu-container {
-    background: yellow;
+    height: 100%;
   }
 }
 
